Only test one test, but with a range of JVM options.